<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AskToAgree</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="unknown">Unknown</string>

    //ActionBar
    <string name="action_createprayer">Create Prayer</string>

    //MainActivity:NavigationDrawer
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!--Google+-->
    <string name="gplus_sign_in_button_name">Log in with G+</string>
    <string name="gplus_signed_in_as_text">Signed in as \'%s\' \nLog out</string>

    <!--Facebook-->
    <string name="APPID">765876013479503</string>
    <string name="title_facebook_login">Facebook Login</string>

    <!--Login/Registration-->

    <string name="login_label_login">Login</string>
    <string name="login_label_email">E-Mail:</string>
    <string name="login_label_password">Password:</string>
    <string name="login_button_signin">Sign in</string>
    <string name="login_link_forgotpassword">Forgot your password?</string>

    <string name="login_button_signup">Sign up</string>
    <string name="register_button_signup">Sign up</string>
    <string name="register_label_register">Register</string>

    <string name="login_edittext_hint_email">E-mail</string>
    <string name="login_edittext_hint_firstname">Firstname</string>
    <string name="login_edittext_hint_lastname">Lastname</string>
    <string name="login_edittext_hint_password">Password</string>
    <string name="login_edittext_hint_username">Username</string>

    <!--Forgot Password-->
    <string name="forgotpassword_button">Restore Password</string>
    <string name="forgotpassword_text">Please enter your password here and we will restore your password:</string>

    <!--MyPrayer-->
    <string name="myprayer_create_hint_title">Title</string>
    <string name="myprayer_create_hint_text">Prayer</string>
    <string name="myprayer_create_heading_share">Share your Prayer</string>
    <string name="myprayer_create_checkbox_privacy">Public</string>
    <string name="myprayer_create_button_text">Create Prayer</string>
    <string name="myprayer_empty_prayers">You don\'t have any Prayers yet</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_share_title">Share with Friends</string>
    <string name="privacy_public">public</string>
    <string name="delete_prayer">Delete prayer?</string>
    <string name="yes">Yes</string>
    <string name="myprayer_view_heading_share">Shared with:</string>

    <!--Toasts-->
    <string name="toast_wrong_password">Wrong password, please try again!</string>
    <string name="toast_user_not_exist">The entered email address is not valid, please try again!</string>
    <string name="toast_account_created">Registration successful!</string>
    <string name="toast_login_success">You are now logged in!</string>
    <string name="toast_ok">Successful!</string>
    <string name="toast_loading_error">Loading failed, please try again later!</string>

    <!--Invite-->
    <string name="button_invite">invite</string>
    <string name="tab_friends">Friends</string>
    <string name="tab_request">Invite</string>
    <string name="tab_respond">Invites</string>
    <string name="request_sent">Request sent</string>
    <string name="button_accept">accept</string>
    <string name="button_accepted">accepted</string>
    <string name="button_search">search</string>

    <!--Home-->
    <string name="word_title">The Word</string>

    <!--Shared Prayers-->
    <string name="agree">agree</string>

</resources>
