<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/login_layout_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/activity_margin"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/register_title"
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_label_register"
            android:gravity="center" />

        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/register_edittext_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_edittext_hint_firstname"
            android:inputType="text" />

        <EditText
            android:id="@+id/register_edittext_lasttname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_edittext_hint_lastname"
            android:inputType="text" />

        <EditText
            android:id="@+id/register_edittext_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_edittext_hint_username"
            android:inputType="text" />

        <EditText
            android:id="@+id/register_edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_edittext_hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/register_edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_edittext_hint_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/register_button_createAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/register_button_createAccount"
            style="@style/Buttons"/>


    </LinearLayout>


</RelativeLayout>