<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/login_layout_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/activity_margin"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_label_login"
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_label_login" />

        <EditText
            android:id="@+id/login_edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:hint="@string/login_edittext_hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/login_edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:hint="@string/login_edittext_hint_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_button_login"
            style="@style/Buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/login_button_signin" />

        <TextView
            android:id="@+id/login_link_forgotpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:gravity="center"
            android:text="@string/login_link_forgotpassword" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/gplus_btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/gplus_btn_sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>